2008-02-18  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/libusb.vapi: add libusb bindings,
	  patch by Evan Nemerson

2008-02-18  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_signal_handlers_* bindings

2008-02-18  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: convert FileStream to instance_pos syntax

2008-02-18  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: support delegates throwing
	  exceptions, patch by Andrea Del Signore, fixes bug 517024

2008-02-18  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnet-2.0/: update to use vala-gen-introspect

	* vapi/gnet-2.0.vapi: regenerated

2008-02-18  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix GObjectClass binding

2008-02-16  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala, gobject/valaccodegenerator.vala: support
	  [NoArrayLength] attribute for delegates

2008-02-15  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: write cheader_filename for
	  namespace methods

	* vapi/: regenerated bindings, fixes bug 514350

2008-02-15  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala: generate casts for property
	  assignments where necessary, fixes bug 511732

2008-02-15  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegenerator.vala: fix memory management of
	  parameters with ownership transfer, fixes bug 511642

2008-02-14  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: avoid testing floating point
	  numbers for equality, fixes bug 516259

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala: visit error domains, fixes bug 515828

2008-02-12  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/: fix gdk_window_get_origin binding
	* vapi/packages/gtk+-2.0/: fix gtk_spin_button_get_range binding

	* vapi/gdk-2.0.vapi, vapi/gtk+-2.0.vapi: regenerated
