@@ -6,4 +6,7 @@ g_file_new_for_path transfer_ownership="1"
 g_file_new_for_uri transfer_ownership="1"
 GMountOperation::reply has_emitter="1"
 g_themed_icon_new_from_names.iconnames is_array="1"
-
+g_input_stream_read_all.bytes_read is_out="1"
+g_data_input_stream_read_line.length is_out="1"
+g_data_input_stream_read_until.length is_out="1"
+GIOErrorEnum rename_to="IOError"
