@@ -1,3 +1,13 @@
+2008-02-19  Raffaele Sandrini  <raffaele@sandrini.ch>
+
+	reviewed by: <delete if not using a buddy>
+
+	* gobject/valaccodegenerator.vala:
+	* vapi/gio-2.0.vapi:
+	* vapi/glib-2.0.vapi:
+	* vapi/packages/gio-2.0/gio-2.0.metadata:
+	* vapigen/valagidlparser.vala:
+
 2008-02-18  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/Makefile.am, vapi/libusb.vapi: add libusb bindings,
